feat: Added specific response status code for each kind of HTTP request - CREATE:201, READ:200, UPDATE:202, DELETE:204, PATCH:202
